@@ -30,13 +30,6 @@
 class tx_solr_facet_FacetOption {
 
 	/**
-	 * The query which is going to be sent to Solr when a user selects a facet.
-	 *
-	 * @var tx_solr_Query
-	 */
-	protected $query;
-
-	/**
 	 * Facet name.
 	 *
 	 * @var string
@@ -67,49 +60,45 @@ class tx_solr_facet_FacetOption {
 	protected $numberOfResults;
 
 	/**
-	 * Query link builder
+	 * The current facet's configuration.
 	 *
-	 * @var tx_solr_query_LinkBuilder
+	 * @var array
 	 */
-	protected $queryLinkBuilder;
+	protected $facetConfiguration;
 
 
 	/**
 	 * Constructor.
 	 *
-	 * @param tx_solr_Query $query Query instance used to build links.
 	 * @param string $facetName Facet Name
 	 * @param integer|string $facetOptionValue Facet option value
 	 * @param integer $facetOptionNumberOfResults number of results to be returned when applying this option's filter
 	 */
-	public function __construct(tx_solr_Query $query, $facetName, $facetOptionValue, $facetOptionNumberOfResults = 0) {
-		$this->query = $query;
-
+	public function __construct($facetName, $facetOptionValue, $facetOptionNumberOfResults = 0) {
 		$this->facetName       = $facetName;
 		$this->value           = $facetOptionValue;
 		$this->numberOfResults = intval($facetOptionNumberOfResults);
 
-
-		$this->queryLinkBuilder = t3lib_div::makeInstance('tx_solr_query_LinkBuilder', $query);
+		$solrConfiguration        = tx_solr_Util::getSolrConfiguration();
+		$this->facetConfiguration = $solrConfiguration['search.']['faceting.']['facets.'][$this->facetName . '.'];
 	}
 
 	/**
 	 * Renders a single facet option according to the facet's rendering
 	 * instructions that may have been configured.
 	 *
-	 * @param array $facetConfiguration The facet's configuration
 	 * @return string The facet option rendered according to rendering instructions if available
 	 */
-	public function render(array $facetConfiguration = array()) {
+	public function render() {
 		$renderedFacetOption = $this->value;
 
-		if (isset($facetConfiguration['renderingInstruction'])) {
+		if (isset($this->facetConfiguration['renderingInstruction'])) {
 			$contentObject = t3lib_div::makeInstance('tslib_cObj');
 			$contentObject->start(array('optionValue' => $this->value));
 
 			$renderedFacetOption = $contentObject->cObjGetSingle(
-				$facetConfiguration['renderingInstruction'],
-				$facetConfiguration['renderingInstruction.']
+				$this->facetConfiguration['renderingInstruction'],
+				$this->facetConfiguration['renderingInstruction.']
 			);
 		}
 
@@ -142,197 +131,6 @@ class tx_solr_facet_FacetOption {
 		}
 
 		return $isSelected;
-	}
-
-	/**
-	 * Creates a link tag to apply a facet option to a search result.
-	 *
-	 * @param string $linkText The link text
-	 * @return string Html link tag to apply a facet option to a search result
-	 */
-	public function getAddFacetOptionLink($linkText) {
-		$typolinkOptions  = $this->getTypolinkOptions();
-		$filterParameters = $this->addFacetAndEncodeFilterParameters();
-
-
-
-		return $this->queryLinkBuilder->getQueryLink($linkText, array('filter' => $filterParameters), $typolinkOptions);
-	}
-
-	/**
-	 * Creates the URL to apply a facet option to a search result.
-	 *
-	 * @return string URL to apply a facet option to a search result
-	 */
-	public function getAddFacetOptionUrl() {
-		$filterParameters = $this->addFacetAndEncodeFilterParameters();
-
-		return $this->queryLinkBuilder->getQueryUrl(array('filter' => $filterParameters));
-	}
-
-	/**
-	 * Retrieves the filter parmeters from the url and adds an additional facet
-	 * option to create a link to apply additional facet options to a
-	 * search result.
-	 *
-	 * @return array An array of filter parameters
-	 */
-	protected function addFacetAndEncodeFilterParameters() {
-		$solrConfiguration = tx_solr_Util::getSolrConfiguration();
-		$resultParameters = t3lib_div::_GPmerged('tx_solr');
-		$filterParameters = array();
-
-		if (isset($resultParameters['filter'])
-		&& !$solrConfiguration['search.']['faceting.']['singleFacetMode']) {
-			$filterParameters = array_map('urldecode', $resultParameters['filter']);
-		}
-
-		$filterParameters[] = $this->facetName . ':' . $this->getUrlValue();
-
-		$filterParameters = array_unique($filterParameters);
-		$filterParameters = array_map('urlencode', $filterParameters);
-
-		return $filterParameters;
-	}
-
-	// FIXME extract URL/Link building
-
-	/**
-	 * Creates a link tag with a link to remove a facet option from the search result.
-	 *
-	 * @param string $linkText link text
-	 * @return string Html tag with link to remove a facet
-	 */
-	public function getRemoveFacetOptionLink($linkText) {
-		$typolinkOptions  = $this->getTypolinkOptions();
-		$filterParameters = $this->removeFacetAndEncodeFilterParameters();
-
-		return $this->queryLinkBuilder->getQueryLink($linkText, array('filter' => $filterParameters), $typolinkOptions);
-	}
-
-	/**
-	 * Creates a URL to remove a facet option from a search result.
-	 *
-	 * @return string URL to remove a facet
-	 */
-	public function getRemoveFacetOptionUrl() {
-		$filterParameters = $this->removeFacetAndEncodeFilterParameters();
-
-		return $this->queryLinkBuilder->getQueryUrl(array('filter' => $filterParameters));
-	}
-
-	/**
-	 * Removes a facet option from to filter query.
-	 *
-	 * @return array An array of filter parameters
-	 */
-	protected function removeFacetAndEncodeFilterParameters() {
-		$resultParameters = t3lib_div::_GPmerged('tx_solr');
-		$filterParameters = array();
-		$indexToRemove    = FALSE;
-
-		if (isset($resultParameters['filter'])) {
-				// urldecode the array to get the original representation
-			$filterParameters = array_values((array) array_map('urldecode', $resultParameters['filter']));
-			$filterParameters = array_unique($filterParameters);
-			$indexToRemove    = array_search($this->facetName . ':' . $this->getUrlValue(), $filterParameters);
-		}
-
-		if ($indexToRemove !== FALSE) {
-			unset($filterParameters[$indexToRemove]);
-		}
-
-		$filterParameters = array_map('urlencode', $filterParameters);
-
-		return $filterParameters;
-	}
-
-	/**
-	 * Creates a link tag with a link that will replace the current facet's
-	 * option with this option applied to the search result instead.
-	 *
-	 * @param string $linkText link text
-	 * @return string Html tag with link to replace a facet's active option with this option
-	 */
-	public function getReplaceFacetOptionLink($linkText) {
-		$typolinkOptions  = $this->getTypolinkOptions();
-		$filterParameters = $this->replaceFacetAndEncodeFilterParameters();
-
-		return $this->queryLinkBuilder->getQueryLink($linkText, array('filter' => $filterParameters), $typolinkOptions);
-	}
-
-	/**
-	 * Creates URL that will replace the current facet's option with this option
-	 * applied to the search result instead.
-	 *
-	 * @return string URL to replace a facet's active option with this option
-	 */
-	public function getReplaceFacetOptionUrl() {
-		$filterParameters = $this->replaceFacetAndEncodeFilterParameters();
-
-		return $this->queryLinkBuilder->getQueryUrl(array('filter' => $filterParameters));
-	}
-
-	/**
-	 * Replaces a facet option in a filter query.
-	 *
-	 * @return array Array of filter parameters
-	 */
-	protected function replaceFacetAndEncodeFilterParameters() {
-		$resultParameters = t3lib_div::_GPmerged('tx_solr');
-		$filterParameters = array();
-		$indexToReplace   = FALSE;
-
-		if (isset($resultParameters['filter'])) {
-				// urlencode the array to get the original representation
-			$filterParameters = array_values((array) array_map('urldecode', $resultParameters['filter']));
-			$filterParameters = array_unique($filterParameters);
-
-				// find the currently used option for this facet
-			foreach ($filterParameters as $key => $filter) {
-				list($filterName, $filterValue) = explode(':', $filter);
-
-				if ($filterName == $this->facetName) {
-					$indexToReplace = $key;
-					break;
-				}
-			}
-		}
-
-		if ($indexToReplace !== FALSE) {
-				// facet found, replace facet
-				// move facet to the end of the uri so it may be manipulated using JavaScript
-			unset($filterParameters[$indexToReplace]);
-			$filterParameters[] = $this->facetName . ':' . $this->getUrlValue();
-		} else {
-				// facet not found, add facet
-			$filterParameters[] = $this->facetName . ':' . $this->getUrlValue();
-		}
-
-		$filterParameters = array_map('urlencode', $filterParameters);
-
-		return $filterParameters;
-	}
-
-	/**
-	 * Checks for the TypoScript option facetLinkATagParams and
-	 * creates an option array.
-	 *
-	 * @return array $typolinkOptions Array were the options ATagParams may included
-	 */
-	protected function getTypolinkOptions() {
-		$typolinkOptions   = array();
-		$solrConfiguration = tx_solr_Util::getSolrConfiguration();
-
-		if (!empty($solrConfiguration['search.']['faceting.']['facetLinkATagParams'])) {
-			$typolinkOptions['ATagParams'] = $solrConfiguration['search.']['faceting.']['facetLinkATagParams'];
-		}
-
-		if (!empty($this->facetConfiguration['facetLinkATagParams'])) {
-			$typolinkOptions['ATagParams'] = $this->facetConfiguration['facetLinkATagParams'];
-		}
-
-		return $typolinkOptions;
 	}
 
 	/**
