@@ -64,6 +64,7 @@
 	* Added support for facet queries
 	* Extracted all query link building methods to tx_solr_query_LinkBuilder
 	* Moved query GET parameter configuration handling from plugin base to query link builder
+	* Extracted all facet option query link building methods from tx_solr_facet_FacetOption to tx_solr_facet_LinkBuilder
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
